k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: digitrans
  labels:
    project: digitrans-cm
